--- a/style.css
+++ b/style.css
@@ -352,10 +352,45 @@ button i {
     top: 0px;
 
 }
- li{
-    list-style : none ;
+
+li {
+    list-style: none;
     text-align: center;
- }
-.subscribe{
+}
+
+.subscribe {
     border: 1px solid var(--dark-blue) !important;
+}
+
+/* Style the side navigation */
+.sidenav {
+    height: 100%;
+    width: 300px;
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    
+    
+    margin-top: 20px;
+}
+
+
+/* Side navigation links */
+.sidenav a {
+    color: white;
+    padding: 26px;
+  
+}
+
+/* Change color on hover */
+.sidenav a:hover {
+    background-color: #ddd;
+    color: black;
+}
+
+/* Style the content */
+.content {
+    margin-left: 300px;
+    padding-left: 20px;
 }
