--- a/style.css
+++ b/style.css
@@ -68,6 +68,14 @@ body.dark-mode {
         margin-left: 10px;
         padding-bottom: -1px;
     }
+    p{
+        font-size: 18px !important;
+    }
+}
+@media (max-width: 500px) {
+    p{
+        font-size: 16px !important;
+    }
 }
 
 h1 {
@@ -394,3 +402,20 @@ li {
     margin-left: 300px;
     padding-left: 20px;
 }
+.card-body,.card{
+    background-color: var(--white);
+}
+.swiper-slide {
+    display: flex;
+    justify-content: center;
+    position: relative;
+    padding: 0;
+    margin: 0 !important;
+    border-radius: 10px;
+    overflow: hidden;
+    cursor: pointer;
+    align-items: center;
+    height: 400px;}
+    .new-shadow{
+        box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+    }
